# advent

2025/: .gitignore  Cargo.toml
2025/src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08-fast.rs  08.rs  09.rs  11.rs
