[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
ndarray = "0.17.1"
winnow = "0.7.14"

[[bin]]
name = "01"
path = "src/01.rs"

[[bin]]
name = "02"
path = "src/02.rs"

[[bin]]
name = "03"
path = "src/03.rs"

[[bin]]
name = "04"
path = "src/04.rs"

[[bin]]
name = "05"
path = "src/05.rs"

[[bin]]
name = "06"
path = "src/06.rs"

[[bin]]
name = "07"
path = "src/07.rs"
